edited team profile and added their photo

--- a/index.html
+++ b/index.html
@@ -110,9 +110,14 @@
               <li><i class="ri-check-double-line"></i> Do use the most popular engine to ensure it works on most platform.</li>
               <li><i class="ri-check-double-line"></i> Free of charge for the first three minor and major changes after deployment.</li>
             </ul>
+            <br>
+            <br>
           </div>
+
+
           <!-- ======= Team Section ======= -->
           <section id="team" class="team section-bg">
+
             <div class="container" data-aos="fade-up">
 
               <div class="section-title">
@@ -124,16 +129,16 @@
 
                 <div class="col-lg-6">
                   <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+                    <div class="pic"><img src="assets/img/team/simon.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
-                      <h4>Walter White</h4>
-                      <span>Chief Executive Officer</span>
-                      <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                      <h4>Simon Chong Kai Yuen</h4>
+                      <span> <h5>Team Leader</h5>  <br> Kuching Sarawak</span>
+                      <p>Contact me to start-up and enjoy your first game development service from my team!</p>
                       <div class="social">
-                        <a href=""><i class="ri-twitter-fill"></i></a>
-                        <a href=""><i class="ri-facebook-fill"></i></a>
-                        <a href=""><i class="ri-instagram-fill"></i></a>
-                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                        <a href="https://github.com/Simon711"><i class="i bi-github"></i></a>
+                        <a href="https://web.facebook.com/simon.chong.711"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.instagram.com/simonnchong/"><i class="ri-instagram-fill"></i></a>
+                        <a href="https://www.linkedin.com/in/simon-chong-1b0362236/"> <i class="ri-linkedin-box-fill"></i> </a>
                       </div>
                     </div>
                   </div>
@@ -141,11 +146,11 @@
 
                 <div class="col-lg-6 mt-4 mt-lg-0">
                   <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-                    <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                    <div class="pic"><img src="assets/img/team/ng.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
-                      <h4>Sarah Jhonson</h4>
-                      <span>Product Manager</span>
-                      <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                      <h4>Ng Shu Yu</h4>
+                      <span> <h5>Scrum Master</h5><br>Johor Bahru, Johor</span>
+                      <p>I will be contacting with client our frequently during the agile developement progress fullfil your requirement.</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
                         <a href=""><i class="ri-facebook-fill"></i></a>
@@ -158,11 +163,11 @@
 
                 <div class="col-lg-6 mt-4">
                   <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+                    <div class="pic"><img src="assets/img/team/clive.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
-                      <h4>William Anderson</h4>
-                      <span>CTO</span>
-                      <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+                      <h4>Clive Lai Yi Cheng</h4>
+                      <span><h5>Developer 1</h5><br>Kuching, Sarawak</span>
+                      <p>I am one of the developers in implementing your requirement into the game!</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
                         <a href=""><i class="ri-facebook-fill"></i></a>
@@ -175,11 +180,11 @@
 
                 <div class="col-lg-6 mt-4">
                   <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-                    <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                    <div class="pic"><img src="assets/img/team/siah.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
-                      <h4>Amanda Jepson</h4>
-                      <span>Accountant</span>
-                      <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+                      <h4>Siah Weng Tze</h4>
+                      <span> <h5>Developer 2</h5> <br>Klang, Selangor</span>
+                      <p>I will be the second developer that have magic to turn your imagination into real!</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
                         <a href=""><i class="ri-facebook-fill"></i></a>
@@ -190,14 +195,13 @@
                   </div>
                 </div>
 
-                <center>
                   <div class="col-lg-6 mt-4">
-                    <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-                      <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                    <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="500">
+                      <div class="pic"><img src="assets/img/team/chong.jpg" class="img-fluid" alt=""></div>
                       <div class="member-info">
-                        <h4>Amanda Jepson</h4>
-                        <span>Accountant</span>
-                        <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+                        <h4>Chong Kai Zhe</h4>
+                        <span> <h5>Tester</h5> <br>Alor Setar, Kedah</span>
+                        <p>I am responsible to test the game before the game is released!</p>
                         <div class="social">
                           <a href=""><i class="ri-twitter-fill"></i></a>
                           <a href=""><i class="ri-facebook-fill"></i></a>
@@ -208,7 +212,6 @@
                     </div>
                   </div>
               </div>
-              </center>
 
 
             </div>
