added speaker details and event poster

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
+          <li><a class="nav-link scrollto" href="#our_event">Our Event</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Activity</a></li>
-          <li><a class="nav-link   scrollto" href="#portfolio">Reflection</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Reflection</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
@@ -62,7 +63,7 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
+  <!-- ============================================================================ Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container">
@@ -86,7 +87,7 @@
   <main id="main">
 
 
-    <!-- ======= About Us Section ======= -->
+    <!--  ========================================================================== About Us Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
@@ -132,7 +133,13 @@
                     <div class="pic"><img src="assets/img/team/simon.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                       <h4>Simon Chong Kai Yuen</h4>
-                      <span> <h5>Team Leader</h5>  <br> Kuching Sarawak</span>
+                      <span>
+                        <h5>Team Leader</h5>
+                        Third year student of UTM, Johor Bahru, Bachelor of Computer Science in Graphic & Multimedia Software.
+                        <br>
+                        <br>
+                        From Kuching, Sarawak
+                      </span>
                       <p>Contact me to start-up and enjoy your first game development service from my team!</p>
                       <div class="social">
                         <a href="https://github.com/Simon711"><i class="i bi-github"></i></a>
@@ -149,8 +156,14 @@
                     <div class="pic"><img src="assets/img/team/ng.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                       <h4>Ng Shu Yu</h4>
-                      <span> <h5>Scrum Master</h5><br>Johor Bahru, Johor</span>
-                      <p>I will be contacting with client our frequently during the agile developement progress fullfil your requirement.</p>
+                      <span>
+                        <h5>Scrum Master</h5>
+                        Third year student of UTM, Johor Bahru, Bachelor of Computer Science in Graphic & Multimedia Software.
+                        <br>
+                        <br>
+                        From Johor Bahru, Johor
+                      </span>
+                      <p>I will be contacting with client our frequently during the agile development progress fullfil your requirement!</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
                         <a href=""><i class="ri-facebook-fill"></i></a>
@@ -166,7 +179,13 @@
                     <div class="pic"><img src="assets/img/team/clive.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                       <h4>Clive Lai Yi Cheng</h4>
-                      <span><h5>Developer 1</h5><br>Kuching, Sarawak</span>
+                      <span>
+                        <h5>Developer 1</h5>
+                        Third year student of UTM, Johor Bahru, Bachelor of Computer Science in Graphic & Multimedia Software.
+                        <br>
+                        <br>
+                        From Kuching, Sarawak
+                      </span>
                       <p>I am one of the developers in implementing your requirement into the game!</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
@@ -183,7 +202,13 @@
                     <div class="pic"><img src="assets/img/team/siah.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                       <h4>Siah Weng Tze</h4>
-                      <span> <h5>Developer 2</h5> <br>Klang, Selangor</span>
+                      <span>
+                        <h5>Developer 2</h5>
+                        Third year student of UTM, Johor Bahru, Bachelor of Computer Science in Computer Network and Security.
+                        <br>
+                        <br>
+                        From Klang, Selangor
+                      </span>
                       <p>I will be the second developer that have magic to turn your imagination into real!</p>
                       <div class="social">
                         <a href=""><i class="ri-twitter-fill"></i></a>
@@ -195,22 +220,27 @@
                   </div>
                 </div>
 
-                  <div class="col-lg-6 mt-4">
-                    <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="500">
-                      <div class="pic"><img src="assets/img/team/chong.jpg" class="img-fluid" alt=""></div>
-                      <div class="member-info">
-                        <h4>Chong Kai Zhe</h4>
-                        <span> <h5>Tester</h5> <br>Alor Setar, Kedah</span>
-                        <p>I am responsible to test the game before the game is released!</p>
-                        <div class="social">
-                          <a href=""><i class="ri-twitter-fill"></i></a>
-                          <a href=""><i class="ri-facebook-fill"></i></a>
-                          <a href=""><i class="ri-instagram-fill"></i></a>
-                          <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                        </div>
+                <div class="col-lg-6 mt-4">
+                  <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="500">
+                    <div class="pic"><img src="assets/img/team/chong.jpg" class="img-fluid" alt=""></div>
+                    <div class="member-info">
+                      <h4>Chong Kai Zhe</h4>
+                      <span>
+                        <h5>Tester</h5>
+                        Second year student of UTM, Johor Bahru, Bachelor of Computer Science in Data Engineering.
+                        <br>
+                        <br>Alor Setar, Kedah
+                      </span>
+                      <p>I am responsible to test the game ensure everthing is working well before the game is released!</p>
+                      <div class="social">
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-facebook-fill"></i></a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
                       </div>
                     </div>
                   </div>
+                </div>
               </div>
 
 
@@ -221,29 +251,42 @@
       </div>
     </section><!-- End About Us Section -->
 
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us section-bg">
+    <!-- ================================================================================== Our Event Section =========================== -->
+
+    <section id="our_event" class="why-us section-bg">
       <div class="container-fluid" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Our Event</h2>
+          <p>We had organized some eventes previously, let's join us for the future event is possible!</p>
+        </div>
 
         <div class="row">
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content">
-              <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
+              <h3>Industrial Talk by <strong>Mr David Chew</strong> One of The Founders of <strong>Pin Tea Malaysia.</strong></h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                On 14<sup>th</sup> June 2022, we invited the local business man Mr David as our speaker to deliver an industrial talk
+                on Webex online paltform about his business journey in Malaysia, let's go through the event on that day.
               </p>
             </div>
 
             <div class="accordion-list">
               <ul>
                 <li>
-                  <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i
-                      class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">
+                    <span>01</span> Details of Speaker<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+
+                    <p><span class="text-primary">Full name: </span>David Chew</p>
+                    <p><span class="text-primary">Position:</span>Director, Chief Business Development Officer (CBDO)</p>
+                    <p><span class="text-primary">Company name:</span>Pin Tea Malaysia</p>
+                    <p><span class="text-primary">Company address:</span>85, Jalan Perindustrian 4/KU8, Kawasan Perindustrian Meru Selatan, 41050 Klang, Selangor, Malaysia.</p>
+                    <p><span class="text-primary">Email: </span>davidchew668@gmail.com</p>
+                    <p><span class="text-primary">Contact: </span>016-6960165</p>
+
                     </p>
                   </div>
                 </li>
@@ -270,12 +313,23 @@
                   </div>
                 </li>
 
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>04</span> Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i
+                      class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
+                    <p>
+                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis
+                      convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    </p>
+                  </div>
+                </li>
+
               </ul>
             </div>
 
           </div>
 
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/poster.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
         </div>
 
       </div>
