done photography session

--- a/index.html
+++ b/index.html
@@ -243,8 +243,6 @@
                   </div>
                 </div>
               </div>
-
-
             </div>
           </section><!-- End Team Section -->
         </div>
@@ -392,20 +390,18 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis
-                      convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                      <img src="assets\img\talk.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk">
                     </p>
+                    
                   </div>
                 </li>
-
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">
                     <span>05</span> Photography Session of Interview <i class="bx bx-chevron-down icon-show"></i><i
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis
-                      convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                      <img src="assets\img\interview.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk">
                     </p>
                   </div>
                 </li>
@@ -416,8 +412,7 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis
-                      convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                      
                     </p>
                   </div>
                 </li>
