--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="accordion-list">
               <ul>
                 <li>
-                  <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-1" class="collapse">
                     <span>01</span> Details of Speaker<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
@@ -294,10 +294,10 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">
                     <span>02</span>Interview Session with Mr David<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
-                    <p>
-                      <iframe width="610" height="343" src="https://www.youtube.com/embed/KLpptpDwjj8" title="Interview with founder of Pin Tea Malaysia" frameborder="0"
+                    <br><div class="ratio ratio-16x9">
+                      <iframe src="https://www.youtube.com/embed/KLpptpDwjj8" title="Interview with founder of Pin Tea Malaysia" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </p>
+                    </div>
                   </div>
                 </li>
 
@@ -401,19 +401,42 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      <img src="assets\img\interview.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk">
+                      <img src="assets\img\interview.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Interview">
                     </p>
                   </div>
                 </li>
 
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">
-                    <span>06</span> Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i
+                    <span>06</span> Results of Google Form <i class="bx bx-chevron-down icon-show"></i><i
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
-                    <p>
-                      
-                    </p>
+                    <ul>
+                      <li>
+                        <img src="assets\img\google-form\1.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\2.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\3.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\4.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\5.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\6.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\7.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                      <li>
+                        <img src="assets\img\google-form\8.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
+                      </li>
+                    </ul>
                   </div>
                 </li>
 
