added talk video session

--- a/index.html
+++ b/index.html
@@ -292,18 +292,19 @@
 
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">
-                    <span>02</span>Interview Session with Mr David<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <span>02</span>Interview Session<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
-                    <br><div class="ratio ratio-16x9">
-                      <iframe src="https://www.youtube.com/embed/KLpptpDwjj8" title="Interview with founder of Pin Tea Malaysia" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br>
+                    <div class="ratio ratio-16x9">
+                      <iframe src="https://www.youtube.com/embed/KLpptpDwjj8" title="Interview with founder of Pin Tea Malaysia" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                     </div>
                   </div>
                 </li>
 
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">
-                    <span>03</span> Q&A Session <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                    <span>03</span> Q & A <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <ul>
                       <li>
@@ -319,35 +320,35 @@
                       <li>
                         <h5><strong>How do you manage your stress? </strong></h5>
                         <h6 class="text-justify">
-                          When I have stress, I don’t like to be distracted. I like to be alone a lot on my own. Because of a 
-                          few things, I have a tea set to make tea. I just sit there alone. Just like a very quiet moment for 
-                          me, then just drink some tea, make some tea like we called KungFu tea. I just relieve all my stress, 
-                          maybe I can listen to some music. And one more thing, the favorite way  to help me to relieve stress 
-                          is to drive to Genting, as fast as I can. So whenever my favorite sport is not sky avenue or casino 
-                          because I'm not a gambler. When I went to Genting, there was a temperature write 18° or what, from 
-                          there we drove down the first corner and the first corner there have a blank spot, so I always stop 
-                          my car there. I stop my car there then step down then the view is like I can look all the way all KL 
-                          cities. From standing there I can release my stress, because when I’m standing there I will like stepping 
-                          out from my city already. So I can see everything is very small. So when I have stress, what is the stress 
-                          caused? When we have stress, that thing will enlarge, so negativity in your brain will like exploring 
-                          already so every day your daily life will be distracted. So when I step out there, when I go to the hilltop, 
-                          go to my favorite sport, when I look at the city, the city is so small, I’m thinking the thing that 
-                          bother me that are trying to get in way is smaller than the city, so why do I care it, just go away. 
+                          When I have stress, I don’t like to be distracted. I like to be alone a lot on my own. Because of a
+                          few things, I have a tea set to make tea. I just sit there alone. Just like a very quiet moment for
+                          me, then just drink some tea, make some tea like we called KungFu tea. I just relieve all my stress,
+                          maybe I can listen to some music. And one more thing, the favorite way to help me to relieve stress
+                          is to drive to Genting, as fast as I can. So whenever my favorite sport is not sky avenue or casino
+                          because I'm not a gambler. When I went to Genting, there was a temperature write 18° or what, from
+                          there we drove down the first corner and the first corner there have a blank spot, so I always stop
+                          my car there. I stop my car there then step down then the view is like I can look all the way all KL
+                          cities. From standing there I can release my stress, because when I’m standing there I will like stepping
+                          out from my city already. So I can see everything is very small. So when I have stress, what is the stress
+                          caused? When we have stress, that thing will enlarge, so negativity in your brain will like exploring
+                          already so every day your daily life will be distracted. So when I step out there, when I go to the hilltop,
+                          go to my favorite sport, when I look at the city, the city is so small, I’m thinking the thing that
+                          bother me that are trying to get in way is smaller than the city, so why do I care it, just go away.
                           This is how I release my stress.
                         </h6>
                       </li>
                       <li>
                         <h5><strong>What's your favorite aspect of being an entrepreneur?</strong></h5>
                         <h6 class="text-justify">
-                          I can say it is a challenge and my time, because the challenge in entrepreneurship is not easy, because 
-                          the world is very cruel. We want to collaborate with the other company and the other company wants to 
-                          collaborate with us are two different things. If we want to collaborate with other companies, they want 
-                          to see our profile, attitude. If someone wants to collaborate with us, we need to look into their things, 
-                          this is quite challenging for me, because not every company likes our culture, this is the truth. Most of 
-                          them like us, because we are very free, we are young, we are lively, we can negotiate with the boss, we can 
-                          also go anywhere we like. So, the aspect that I like the most is the challenge. Like myself, I like challenges 
-                          the most, everything I'm doing now is challenging, so I like my job. The other aspect is time, because I can 
-                          control my time freely, I can sleep all the way until 12 noon, then if I want to wake, then I wake up and go 
+                          I can say it is a challenge and my time, because the challenge in entrepreneurship is not easy, because
+                          the world is very cruel. We want to collaborate with the other company and the other company wants to
+                          collaborate with us are two different things. If we want to collaborate with other companies, they want
+                          to see our profile, attitude. If someone wants to collaborate with us, we need to look into their things,
+                          this is quite challenging for me, because not every company likes our culture, this is the truth. Most of
+                          them like us, because we are very free, we are young, we are lively, we can negotiate with the boss, we can
+                          also go anywhere we like. So, the aspect that I like the most is the challenge. Like myself, I like challenges
+                          the most, everything I'm doing now is challenging, so I like my job. The other aspect is time, because I can
+                          control my time freely, I can sleep all the way until 12 noon, then if I want to wake, then I wake up and go
                           to the office. After work, I can brainstorm, meet, then I can go back home and spend time with my family.
 
                         </h6>
@@ -355,17 +356,17 @@
                       <li>
                         <h5><strong>What’s your most satisfying entrepreneur moment so far?</strong></h5>
                         <h6 class="text-justify">
-                          One of the things I want to tell you is that, normally, we think doing business is very profitable. Businessmen 
-                          can always drive a good car, that is nonsense I tell you, that is a lie. Instead, my crews are driving a better 
-                          car than me, like GTR and Ferrari to my shop. So what is my expectation during my business? In this journey, 
-                          I enjoy every particular moment. The best thing about entrepreneurship is I can observe my business growth. 
-                          This is very interesting. The reason is no matter how big the achievement, for example, opening a new shop is 
-                          one of an achievement, actually the achievement in the market is very small. For me, I enjoy starting a business 
-                          by opening a shop. I also solve many problems during my business. Next, I also like to spend my time with my 
-                          partner, because our working time is very free. Although we need to complete our tasks in time, every one of us 
-                          works differently, not following company regulation. A company usually has constant meetings and writing reports, 
-                          but we don’t need that. When we have a project to do with, we just need to go anywhere we want. Let’s say we want 
-                          to go to some food restaurant, so we just go straight away and enjoy our trip. It could be considered 90% of the 
+                          One of the things I want to tell you is that, normally, we think doing business is very profitable. Businessmen
+                          can always drive a good car, that is nonsense I tell you, that is a lie. Instead, my crews are driving a better
+                          car than me, like GTR and Ferrari to my shop. So what is my expectation during my business? In this journey,
+                          I enjoy every particular moment. The best thing about entrepreneurship is I can observe my business growth.
+                          This is very interesting. The reason is no matter how big the achievement, for example, opening a new shop is
+                          one of an achievement, actually the achievement in the market is very small. For me, I enjoy starting a business
+                          by opening a shop. I also solve many problems during my business. Next, I also like to spend my time with my
+                          partner, because our working time is very free. Although we need to complete our tasks in time, every one of us
+                          works differently, not following company regulation. A company usually has constant meetings and writing reports,
+                          but we don’t need that. When we have a project to do with, we just need to go anywhere we want. Let’s say we want
+                          to go to some food restaurant, so we just go straight away and enjoy our trip. It could be considered 90% of the
                           process that we are playing, and the left is the discussion. What we have done is we are learning while playing.
 
                         </h6>
@@ -373,10 +374,10 @@
                       <li>
                         <h5><strong>What's your advice to those fresh graduates that are thinking of creating their own business?</strong></h5>
                         <h6 class="text-justify">
-                          In the different part of view, Mr. David thought that different sizes of business get their own way, not every 
-                          startup business needs to have a huge start-up capital. People can start up what they like from a very small 
-                          capital. For fresh graduates, they need to clear out their mind first, are they ready to jump up from their 
-                          comfort zone or not. They should always have a backup plan and continue learning. The most important thing 
+                          In the different part of view, Mr. David thought that different sizes of business get their own way, not every
+                          startup business needs to have a huge start-up capital. People can start up what they like from a very small
+                          capital. For fresh graduates, they need to clear out their mind first, are they ready to jump up from their
+                          comfort zone or not. They should always have a backup plan and continue learning. The most important thing
                           is to enjoy the whole journey.
                         </h6>
                       </li>
@@ -384,33 +385,45 @@
                   </div>
                 </li>
 
+
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">
-                    <span>04</span> Photography Session of Industrial Talk <i class="bx bx-chevron-down icon-show"></i><i
-                      class="bx bx-chevron-up icon-close"></i></a>
+                    <span>04</span> Photography Session of Interview <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
-                    <p>
-                      <img src="assets\img\talk.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk">
-                    </p>
-                    
-                  </div>
-                </li>
-                <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">
-                    <span>05</span> Photography Session of Interview <i class="bx bx-chevron-down icon-show"></i><i
-                      class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
                     <p>
                       <img src="assets\img\interview.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Interview">
                     </p>
                   </div>
                 </li>
 
+
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">
+                    <span>05</span>Industrial Talk Session<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
+                    <br>
+                    <div class="ratio ratio-16x9">
+                      <iframe src="https://www.youtube.com/embed/PZ0ixk_NP4Q" title="Industrial Talk by founder of Pin Tea Malaysia" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    </div>
+                  </div>
+                </li>
+
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed">
-                    <span>06</span> Results of Google Form <i class="bx bx-chevron-down icon-show"></i><i
-                      class="bx bx-chevron-up icon-close"></i></a>
+                    <span>06</span> Photography Session of Industrial Talk <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list">
+                    <p>
+                      <img src="assets\img\talk.png" class="img-responsive center-block d-block mx-auto" alt="Photography Session of Industrial Talk">
+                    </p>
+
+                  </div>
+                </li>
+
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed">
+                    <span>07</span> Results of Google Form <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-7" class="collapse" data-bs-parent=".accordion-list">
                     <ul>
                       <li>
                         <img src="assets\img\google-form\1.png" class="img-responsive center-block d-block mx-auto" width="100%" height="100%">
