updated my github profile page
I've changed my domain name

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                       </span>
                       <p>Contact me to start-up and enjoy your first game development service from my team!</p>
                       <div class="social">
-                        <a href="https://github.com/Simon711"><i class="i bi-github"></i></a>
+                        <a href="https://github.com/simonnchong"><i class="i bi-github"></i></a>
                         <a href="https://web.facebook.com/simon.chong.711"><i class="ri-facebook-fill"></i></a>
                         <a href="https://www.instagram.com/simonnchong/"><i class="ri-instagram-fill"></i></a>
                         <a href="https://www.linkedin.com/in/simon-chong-1b0362236/"> <i class="ri-linkedin-box-fill"></i> </a>
